--- a/cors_csrf_cookie_steel _script.html
+++ b/cors_csrf_cookie_steel _script.html
@@ -1,3 +1,4 @@
+// CORs Simple html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
 </body>
 </html>
 
-// orgin: null
+// CORs html orgin: null
 <!DOCTYPE html>
 <html lang="en">
 <head>
